# INPG-nawigacja

./: Arek propozycje do Backlogu  PointObject 1.0.0  Propozycja backlogu Tomasz  README.md  backlog  baza.txt  skala.txt
Backlog propozycje/: Kajetan propozycje  Propozycje Kamil
KJanik commit/: NaviTest1.sln
KJanik commit/NaviTest1/: Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Form2.resx  NaviTest1.csproj  Program.cs
KJanik commit/NaviTest1/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
KJanik commit/Navigrap/: Navigrap.sln
KJanik commit/Navigrap/Debug/: Navigrap.exe.metagen
KJanik commit/Navigrap/Navigrap/: FirstF.cpp  FirstF.h  FirstF.resx  Map.h  Navigrap.vcxproj  Navigrap.vcxproj.filters  SecendF.h
KJanik commit/Navigrap/Navigrap/Debug/: .NETFramework,Version=v4.7.2.AssemblyAttributes.asm  Navigrap.vcxproj.GenerateResource.cache
KJanik commit/Navigrap/Navigrap/Debug/Navigrap.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Navigrap.lastbuildstate  Navigrap.write.1u.tlog  link.10084.delete.1.tlog  (+45 more)
Tomasz Jamro commit/: 05-27 commit  BazaDanych.txt  BazaTest.txt  CMakeLists.txt  Dokumentacja.txt  READ-ME
Tomasz Jamro commit/Stare wersje/: BazaDanych.txt  INPG_Nawigacja.cpp  PointObject 1.0.0
Tomasz Jamro commit/Stare wersje/include/: INPG_Nawigacja.hpp
Tomasz Jamro commit/Stare wersje/test/: test_INPG_Nawigacja.cpp
Tomasz Jamro commit/include/: INPG_Nawigacja.hpp
Tomasz Jamro commit/src/: INPG_Nawigacja.cpp
Tomasz Jamro commit/test/: test_INPG_Nawigacja.cpp
